Fix tests after cherr-picking from main